feat: implement network and Octavia services
